--- a/src/components/EntireHand/EntireHand.css
+++ b/src/components/EntireHand/EntireHand.css
@@ -1,8 +1,50 @@
+.EntireHand--medium-size {
+  --height: 6rem;
+}
+
+.EntireHand {
+  position: relative;
+  --size-of-padding: calc(var(--height) * 0.02);
+  height: var(--height);
+  width: calc(1.72 * var(--height) + var(--size-of-padding) * 2);
+}
+
 .EntireHand div {
   position: absolute;
   overflow: hidden;
 }
 
-.EntireHand--rotated-part {
+.EntireHand__straight-part {
+  height: var(--height);
+  width: calc(0.72 * var(--height) + var(--size-of-padding));
+}
+
+.EntireHand__rotated-part {
   transform: rotate(90deg);
+  height: var(--height);
+  width: var(--height);
+  left: calc(0.72 * var(--height) + var(--size-of-padding) * 2);
+}
+
+.EntireHand__tile0 {
+  height: var(--height);
+  width: calc(0.36 * var(--height));
+}
+
+.EntireHand__tile1 {
+  height: var(--height);
+  width: calc(0.36 * var(--height));
+  left: calc(0.36 * var(--height) + var(--size-of-padding));
+}
+
+.EntireHand__tile2 {
+  height: var(--height);
+  width: calc(0.36 * var(--height));
+  left: calc(0.14 * var(--height) - var(--size-of-padding) / 2);
+}
+
+.EntireHand__tile3 {
+  height: var(--height);
+  width: calc(0.36 * var(--height));
+  left: calc(0.50 * var(--height) + var(--size-of-padding) / 2);
 }
