--- a/src/components/TIleCheck/TileCheck.css
+++ b/src/components/TIleCheck/TileCheck.css
@@ -3,18 +3,27 @@
   position: relative;
   height: var(--height);
   width: calc(var(--height) * 0.36);
-  margin: 0 calc(var(--height) * 0.06) calc(var(--height) * 0.04) 0;
+  margin: calc(var(--height) * 0.12) calc(var(--height) * 0.08) calc(var(--height) * 0.08) 0;
 }
 
-.TileCheck--check-mark {
+.TileCheck__check-mark {
   position: absolute;
-  height: 20%;
-  width: 0;
-  top: 82%;
-  left: 69.44%;
-  margin: 0;
+  width: calc(var(--height) * 0.36);
+  bottom: 0;
 }
 
-.TileCheck--check-mark > img {
-  height: 100%;
+.TileCheck--checked .Tile {
+  position: absolute;
+  top: calc(var(--height) * (-0.11));
+}
+
+.TileCheck:focus,
+.TileCheck:hover {
+  outline: 0;
+}
+
+.TileCheck:focus .Tile,
+.TileCheck:hover .Tile {
+  outline: 0;
+  transform: scale(1.05);
 }
