New responsible layout implemented

--- a/src/components/EntireHand/EntireHand.css
+++ b/src/components/EntireHand/EntireHand.css
@@ -3,6 +3,7 @@
 }
 
 .EntireHand {
+  margin: 0 auto;
   position: relative;
   --size-of-padding: calc(var(--height) * 0.02);
   height: var(--height);
