--- a/src/components/NavButtons/NavButtons.css
+++ b/src/components/NavButtons/NavButtons.css
@@ -1,10 +1,19 @@
-.NavButtons__navigation {
-  background-color: darkgoldenrod;
+.NavButtons {
   display: flex;
-  margin: 2rem 1rem 2rem 1rem;
+  margin: 2rem 1rem 1rem;
+  justify-content: center;
 }
 
+/* .NavButtons__flex-wrapper {
+  background-color: darkgoldenrod;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+} */
+
 .NavButtons__menu-button {
+  display: block;
+  flex-shrink: 0;
   background-color: darkgoldenrod;
   color: white;
   border: solid white;
@@ -13,6 +22,7 @@
 }
 
 .NavButtons__menu-button--active {
+  flex-shrink: 0;
   background-color: white;
   color: darkgoldenrod;
 }
