--- a/src/components/TilesLab_sec/InputDiapason/InputDiapason.css
+++ b/src/components/TilesLab_sec/InputDiapason/InputDiapason.css
@@ -32,6 +32,12 @@
   z-index: 80;
 }
 
+.InputDiapason__arrow-down:focus {
+  outline: 0;
+  transform: scale(1.3);
+  border-top: calc(var(--height-input) * 0.4) solid rgb(102, 99, 99);
+}
+
 .InputDiapason__dropbox {
   position: absolute;
   right: 5%;
